--- a/Portfolio Site/visuals.html
+++ b/Portfolio Site/visuals.html
@@ -4,7 +4,6 @@
     <title>bye! have a beautiful time!</title>
 </head>
 <body>
-    <div class="container">
         <!-- Navigation -->
     <nav class="main-nav">
         <ul>
@@ -18,12 +17,11 @@
                 <a href="aboutMe.html">About</a>
             </li>
         </ul>
-    </nav>
-    </div>
+    </nav> 
+    <!-- Navigation Ends Here  -->
+   
     <div class="container">
-        <div><img src=""/></div>
-        <div class="vertical"><img src="Example Poster V.3.png"/></div>
-        <div class="horizontal"><img src=""/></div>
+        <div class="vertical"><img src="Images/Example Poster V.3.png"/></div>
     </div>
     <!--Container Ends Here-->
 </body>
