-Background added -image adjusted -more notes

--- a/Portfolio Site/visuals.html
+++ b/Portfolio Site/visuals.html
@@ -21,7 +21,7 @@
     <!-- Navigation Ends Here  -->
    
     <div class="container">
-        <div class="vertical"><img src="Images/Example Poster V.3.png"/></div>
+        <div><img src="Images/Example Poster V.3.png"/></div>
     </div>
     <!--Container Ends Here-->
 </body>
