--- a/Portfolio Site/music.html
+++ b/Portfolio Site/music.html
@@ -4,7 +4,6 @@
     <title>bye! have a beautiful time!</title>
 </head>
 <body>
-    <div class="container">
         <!-- Navigation -->
     <nav class="main-nav">
         <ul>
@@ -18,8 +17,8 @@
                 <a href="aboutMe.html">About</a>
             </li>
         </ul>
-    </nav>
-    </div>
+    </nav> 
+    <!-- Navigation Ends Here  -->
     <!--Container Ends Here-->
 </body>
 </html>
