--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -1,8 +1,165 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>bye have a beautiful time!</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<!-- Google Fonts -->
+		<link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+	
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="css/font-awesome.min.css"/>
+		<link rel="stylesheet" href="css/magnific-popup.css"/>
+		<link rel="stylesheet" href="css/style.css"/>
+	
+	
+		<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	
+	</head>
+<body>
+	<!-- Page Preloder -->
+	<div id="preloder">
+		<div class="loader"></div>
+	</div>
+
+	<!-- header section start -->
+	<header class="header-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-2 col-md-1">
+					<div class="logo">
+						<h2 class="site-logo">Kobe-Wan Kreations</h2>
+					</div>
+				</div>
+					<nav class="main-menu">
+						<ul>
+							<li><a href="index.html">Work</a></li>
+							<li><a href="home-2.html">Music</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li> 	
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+		<div class="nav-switch">
+			<i class="fa fa-bars"></i>
+		</div>
+	</header>
+	<!-- header section end -->
+
+	<!-- intro section start -->
+	<section class="intro-section">
+		<div class="container text-center">
+			<div class="row">
+				<div class="col-xl-10 offset-xl-1">
+					<h2 class="section-title">Welcome. <br>Please check out my Work!</h2>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- intro section end -->
+
+	<!-- portfolio section start -->
+	<section class="portfolio-section">
+		<div class="container">
+			<ul class="portfolio-filter controls">
+				<li class="control" data-filter="all">All</li>
+				<li class="control" data-filter=".design">Design</li>
+				<li class="control" data-filter=".photo">Photography</li>
+				<li class="control" data-filter=".anime">Animation</li>
+				<li class="control" data-filter=".other">Other</li>
+			</ul>
+		</div>                       
+		<div class="container-fluid p-md-0 ">
+			<div class="row portfolios-area">
+				<div class="mix col-lg-6 col-md-6 design">
+					<a href="Images\Example Poster V.3.png" class="portfolio-item set-bg" data-setbg="Images\Example Poster V.3.png">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+				<div class="mix col-lg-6 col-md-6 ">
+					<a href="" class="portfolio-item set-bg " data-setbg="">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+				<div class="mix col-lg-4 col-md-6 ">
+					<a href="" class="portfolio-item set-bg" data-setbg="">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+				<div class="mix col-lg-4 col-md-6 ">
+					<a href="" class="portfolio-item set-bg" data-setbg="">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+				<div class="mix col-lg-4 col-md-6 ">
+					<a href="" class="portfolio-item set-bg" data-setbg="">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+				<div class="mix col-lg-12 col-md-6 ">
+					<a href="" class="portfolio-item set-bg" data-setbg="">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+				<div class="mix col-lg-6 col-md-6 ">
+					<a href="" class="portfolio-item set-bg" data-setbg="">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+				<div class="mix col-lg-6 col-md-6 ">
+					<a href="" class="portfolio-item set-bg" data-setbg="">
+						<div class="pi-inner">
+							<h2>+ View</h2>
+						</div>						
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- portfolio section end -->
+
+
+	<!-- footer section start -->
+	<footer class="footer-section text-center">
+		<div class="container">
+			<h2 class="section-title mb-5">Hit Me Up!</h2>
+			<div class="social-links">
+				<a href="https://www.linkedin.com/in/kobe-smith-2b0895173/"><span class="fa fa-linkedin"></span></a>
+				<a href="https://www.instagram.com/kobewaan/?hl=en"><span class="fa fa-instagram"></span></a>
+				<a href="https://www.facebook.com/kobe.smith.35"><span class="fa fa-facebook"></span></a>
+				<a href="https://twitter.com/kobewaan"><span class="fa fa-twitter"></span></a>
+			</div>
+		</div>
+	</footer>
+	<!-- footer section end -->
+
+	<!--====== Javascripts & Jquery ======-->
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/mixitup.min.js"></script>
+	<script src="js/magnific-popup.min.js"></script>
+	<script src="js/main.js"></script>
+</body>
 </html>
